--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center text-danger my-5">Film</h1>
+                <h1 class="text-center my-5">Cerca il tuo film</h1>
                 <div class="d-flex gap-5">
-                    <input type="text" class="form-control" id="film" placeholder="Inserisci il titolo di un film">
-                    <button class="btn btn-dark" onclick="cercaFilm()">Cerca Film</button>
+                    <input type="text" class="form-control" id="film" placeholder="Inserisci il titolo di un film (es: 'Titanic')">
+                    <button class="btn btn-bg" onclick="cercaFilm()">Cerca</button>
                 </div>
                 
                 <div class="my-5" id="movies-container"></div>
